# OxyLisp

./: CHANGELOG.md  Cargo.toml  README.md  profile_memory.sh
.github/workflows/: ci.yml
benches/: evaluator.rs
src/: env.rs  evaluator.rs  lexer.rs  lib.rs  main.rs  parser.rs  prelude.rs  types.rs
src/evaluator/: built_in_functions.rs  lambda.rs  mod.rs
src/repl/: mod.rs
src/tests/: evaluator.rs  mod.rs  parser.rs
src/types/: Errors.rs  codeChunk.rs  code_chuck.rs  display.rs  mod.rs
