[package]
name = "oxy_lisp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[toolchain]
channel = "nightly"

[dependencies]
regex = "1"
anyhow = "1.0"
log = "0.4"
env_logger = "0.9.0"
reedline = {git = "https://github.com/nushell/reedline"}
trees = "0.4.1"
once_cell = "1.16.0"

[dev-dependencies]
criterion = "0.4"
test-env-log = "0.2.8"
serial_test = "*"
env_logger = "0.9.0"
# tracing = {version = "0.1", default-features = false}
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}
pretty_assertions = "1.3.0"

[profile.release]
opt-level = 3
debug = true
[[bench]]
name = "evaluator"
harness = false
