[package]
name = "oxy_lisp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[toolchain]
channel = "nightly"

[dependencies]
regex = "1"
anyhow = "1.0"
log = "0.4"
test-log = "0.2.11"
reedline = {git = "https://github.com/nushell/reedline"}
trees = "0.4.1"
once_cell = "1.16.0"
lazy_static = "1.4.0"


[dev-dependencies]
criterion = "0.4"
env_logger = "0.9.0"
serial_test = "*"
test-log = "0.2.11"
pretty_assertions = "1.3.0"

[profile.release]
opt-level = 3
debug = true
[[bench]]
name = "evaluator"
harness = false
